UPDATE: Se agrega schema y funcionalidad de login/registro y logout

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "ngprogress": "*",
     "animate.css": "*",
     "font-awesome": "~4.3.0",
-    "ng-backstretch": "*"
+    "ng-backstretch": "*",
+    "angular-easyfb": "*"
   },
   "devDependencies": {},
   "resolutions": {
