--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,15 @@
 {
-  "name": "Quick Survey",
-  "description": "Encuestas flash para la comunidad",
+  "name": "Campanario Pilucho",
+  "description": "Campanario Pilucho",
   "keywords": ["framework", "laravel", "lumen", "angularjs", "bower"],
   "license": "MIT",
   "type": "project",
   "require": {
     "laravel/lumen-framework": "5.1.*",
     "vlucas/phpdotenv": "~1.0",
-    "facebook/php-sdk-v4": "4.0.*"
+    "facebook/php-sdk-v4": "4.0.*",
+    "firebase/php-jwt" : "*",
+    "guzzlehttp/guzzle": "*"
   },
   "require-dev": {
       "phpunit/phpunit": "~4.0"
