UPDATE: Se verifica versión de iOS para evitar error al obtener objeto de audio

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "ng-backstretch": "*",
     "angular-easyfb": "*",
     "msr": "*",
-    "howler": "2.0.0-beta13"
+    "howler": "2.0.0-beta13",
+    "ng-device-detector": "*"
   },
   "devDependencies": {},
   "resolutions": {
