UPDATE: Se utiliza nueva librería para galería, ya que con esta se puede realizar efecto de movimiento en la boca

--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-easyfb": "*",
     "msr": "*",
     "howler": "2.0.0-beta13",
-    "ng-device-detector": "*"
+    "ng-device-detector": "*",
+    "lialosiu-dancer": "*"
   },
   "devDependencies": {},
   "resolutions": {
