UPDATE: Google Analytics + angulartics y angulartics google analytics

--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "bootstrap": "*",
     "angular": "~1.5.5",
     "angular-route": "~1.5.5",
-    "angulartics": "~1.0.3",
+    "angulartics": "*",
+    "angulartics-google-analytics": "*",
     "angular-bootstrap": "*",
     "animate.css": "*",
     "font-awesome": "~4.3.0",
