UPDATE: Se agrega librería semantic ui para admin

--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "msr": "*",
     "howler": "2.0.0-beta13",
     "ng-device-detector": "*",
-    "lialosiu-dancer": "*"
+    "lialosiu-dancer": "*",
+    "semantic-ui": "*"
   },
   "devDependencies": {},
   "resolutions": {
